修改cpt服务
