# model/user.go
@@ -4,10 +4,9 @@ type User struct {
 	Id                  string  `json:"id"`
 	SId                 string  `json:"sId" xorm:"sId"`
 	Name                string  `json:"name"`
-	Password            string  `json:"password" xorm:"->"`
 	Introduction        string  `json:"introduction"`
 	Balance             float64 `json:"balance"`
-	Icon                []int8  `json:"icon"`
+	Icon                string  `json:"icon"`
 	Phone               string  `json:"phone"`
 	CreditScore         int     `json:"creditScore" xorm:"creditScore"`
 	Email               string  `json:"email"`
